Fix csrf so profile update can work.
